--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -72,7 +72,16 @@
             android:layout_weight="1"
             android:backgroundTint="@android:color/holo_green_dark"
             android:text="✓"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/button_thats_it"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@android:color/holo_blue_dark"
+            android:text="Это!!!"
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
