--- a/app/src/main/res/layout/activity_swipe_alone.xml
+++ b/app/src/main/res/layout/activity_swipe_alone.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".SwipeAloneActivity">
+    tools:context=".view.SwipeAloneActivity">
 
     <com.lorentzos.flingswipe.SwipeFlingAdapterView
         android:id="@+id/swipe_view"
