--- a/app/src/main/res/layout/activity_welcome1.xml
+++ b/app/src/main/res/layout/activity_welcome1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    tools:context=".WellcomeActivity1">
+    tools:context=".view.WellcomeActivity1">
 
     <TextView
 
