--- a/app/src/main/res/layout/activity_swipe_alone.xml
+++ b/app/src/main/res/layout/activity_swipe_alone.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/white"
     tools:context=".view.SwipeAloneActivity">
 
     <com.lorentzos.flingswipe.SwipeFlingAdapterView
         android:id="@+id/swipe_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="281dp"
+        android:layout_height="549dp"
         app:layout_constraintBottom_toTopOf="@id/buttons_layout"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.544" />
 
     <LinearLayout
         android:id="@+id/buttons_layout"
