--- a/app/src/main/res/layout/activity_welcome2.xml
+++ b/app/src/main/res/layout/activity_welcome2.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/gradient"
     tools:context=".view.WellcomeActivity2">
 
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="193dp"
@@ -16,10 +17,9 @@
         android:text="Добро пожаловать"
         android:textColor="#ECECEC"
         android:textSize="30sp"
-        tools:layout_editor_absoluteX="118dp"
-        tools:layout_editor_absoluteY="57dp"
-        tools:ignore="MissingConstraints" />
-
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="109dp"
+        tools:layout_editor_absoluteY="57dp" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -28,18 +28,20 @@
         android:layout_centerInParent="true"
         app:srcCompat="@drawable/remove_bg_ai_1716018722265"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="50dp"
-        tools:layout_editor_absoluteY="57dp" />
+        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteY="75dp" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="335dp"
         android:layout_height="70dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/rounded_button"
+
+
+        android:backgroundTint="#ECECEC"
         android:text="Начать"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="560dp"
-        tools:ignore="MissingConstraints" />
+        android:textColor="#332727"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="618dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
