--- a/app/src/main/res/layout/activity_codeauth.xml
+++ b/app/src/main/res/layout/activity_codeauth.xml
@@ -18,7 +18,9 @@
             android:id="@+id/codeEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Проверить код" />
+            android:hint="Проверить код"
+            android:textColorHint="@color/black"
+            android:textColor="@color/black"/>
 
 
         <Button
