--- a/app/src/main/res/layout/activity_welcome2.xml
+++ b/app/src/main/res/layout/activity_welcome2.xml
@@ -5,43 +5,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    tools:context=".view.WellcomeActivity2">
-
+    tools:context=".view.WelcomeActivity2">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="193dp"
-        android:layout_height="184dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/raleway_black"
         android:gravity="center"
         android:text="Добро пожаловать"
         android:textColor="#ECECEC"
         android:textSize="30sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="109dp"
-        tools:layout_editor_absoluteY="57dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="327dp"
-        android:layout_height="646dp"
-        android:layout_centerInParent="true"
-        app:srcCompat="@drawable/remove_bg_ai_1716018722265"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="75dp" />
+        android:layout_width="324dp"
+        android:layout_height="576dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:srcCompat="@drawable/remove_bg_ai_1716018722265" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="335dp"
-        android:layout_height="70dp"
+
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+
+        app:layout_constraintTop_toBottomOf="@id/imageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"
 
 
         android:backgroundTint="#ECECEC"
         android:text="Начать"
         android:textColor="#332727"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="618dp" />
+        tools:layout_editor_absoluteX="43dp"
+        tools:layout_editor_absoluteY="636dp"
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
